<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.frei.mark.marxnotifier.appFront.UartActivity">


    <group android:id="@+id/uartControls">

        <item
            android:id="@+id/action_displaymode"
            android:title="@string/uart_action_displaymode_format"
            app:showAsAction="never">

            <menu>
                <group
                    android:id="@+id/displayMode"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_displaymode_timestamp"
                        android:title="@string/uart_displaymode_timestamp"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_displaymode_text"
                        android:title="@string/uart_displaymode_text"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/action_datamode"
            android:title="@string/uart_action_datamode_format"
            app:showAsAction="never">

            <menu>
                <group
                    android:id="@+id/dataMode"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_datamode_ascii"
                        android:title="@string/uart_format_ascii"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_datamode_hex"
                        android:title="@string/uart_format_hexadecimal"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>

        <group
            android:id="@+id/uartUserTextControls"
            android:checkableBehavior="all">
            <item
                android:id="@+id/action_echo"
                android:title="@string/uart_action_echo"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_eol"
                android:title="@string/uart_action_eol"
                app:showAsAction="never" />
        </group>
    </group>


    <group android:id="@+id/extra">
        <item
            android:id="@+id/action_refreshcache"
            android:title="@string/action_refreshcache"
            app:showAsAction="never" />

    </group>
</menu>
